<resources>
    <string name="app_name">BeachHacks</string>

    <!-- Facebook App -->
    <string name="facebook_app_id">1087508557955275</string>

    <!-- SendBird App -->
    <string name="sendbird_app_id">753D8215-F096-46E0-A9EC-C0D7B2A76FDC</string>

    <!-- Strings related to user profile for facebook -->
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age_range">Age Range</string>
    <string name="gender">Gender</string>
    <string name="locale">Locale</string>
    <string name="picture">Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_chat_list">Chats</string>
    <string name="title_chat_detail">Chat Detail</string>

</resources>
