<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragmentTab">

    <!-- TODO: Update blank fragment layout -->


    <TableLayout
        android:id="@+id/profile_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow>

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/profile_fb_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/profile_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/profile_fb_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/profile_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/profile_fb_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/profile_agerange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_range" />

            <TextView
                android:id="@+id/profile_fb_agerange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/profile_fb_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/profile_locale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locale" />

            <TextView
                android:id="@+id/profile_fb_locale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/picture" />

            <ImageView
                android:id="@+id/profile_fb_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="" />
        </TableRow>
    </TableLayout>

</FrameLayout>
